feat(setup): basic application setup done (#2)

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -2,7 +2,7 @@ name: ✨ Feature Request
 description: Suggest a new feature or improvement
 title: "[FEATURE]: "
 labels:
-  - enhancement
+  - feature
 
 body:
   - type: markdown
